--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Open Sans', monospace;
 }
 
 .container-header {
@@ -110,6 +110,17 @@ a {
     width: 300px;
 }
 
+.fas {
+    font-size: 300%;
+    position: relative;
+    top: 110px;
+}
+
+.fas:hover {
+    cursor: pointer;
+    box-shadow: 2px 2px #bcbcbc;
+}
+
 .container-img-right-out {
     float: right;
     width: 60%;
@@ -122,6 +133,27 @@ a {
     margin-top: -100px;
 }
 
+.container-main {
+    height: 100vh;
+    margin-top: 200px;
 
+}
 
+.container-general-main {
+    width: 70%;
+    margin: auto;
+}
+
+.title-main h2 {
+    text-align: center;
+    font-size: 400%;
+}
+
+.container-radio {
+    margin-top: 50px;
+}
+
+.container-radio input {
+    margin-left: 10px;
+}
 
