--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
     float: left;
 }
 
-.Botton {
+.Button {
     background-color: blue;
     padding: 10px 15px;
     color: white;
@@ -182,10 +182,38 @@ a {
 }
 
 .box-center strong{
-    padding: 0 0 0 20px;
+    padding: 20px 0 0 20px;
 }
 
 .Mese {
-    padding: 20px 0 0 20px;
+    padding: 10px 0 0 20px;
     color: #86929d;
 }
+
+.user {
+    padding: 20px 0 0 0;
+}
+
+.user, .folder, .pencil {
+    padding-bottom: 20px;
+    padding-left: 20px;
+}
+
+.Offerte {
+    text-align: center;
+    width: 90%;
+    margin: auto;
+}
+
+.Offerte a{
+    color: white;
+}
+
+.link-acquista {
+    padding: 20px 0 20px 20px;
+}
+
+.link-acquista a {
+    text-decoration: underline;
+}
+
