--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ a {
 }
 
 .container-main {
-    height: 100vh;
+    height: 900px;
     margin-top: 200px;
 
 }
@@ -190,6 +190,10 @@ a {
     color: #86929d;
 }
 
+.options {
+    height: 800px;
+}
+
 .user {
     padding: 20px 0 0 0;
 }
@@ -214,6 +218,37 @@ a {
 }
 
 .link-acquista a {
+    color: blue;
+}
+
+.space {
+    padding: 20px 320px 30px 20px;
+}
+
+.link-acquista a {
     text-decoration: underline;
+}
+
+.must-plane {
+    width: 90%;
+    margin: auto;
+}
+
+.must-plane h4 {
+    font-size: 125%;
+    padding-bottom: 20px;
+}
+
+.fa-check {
+    color: blue;
+}
+
+.must-plane span {
+    margin-right: 20px;
+}
+
+
+.pad {
+    padding-top: 20px;
 }
 
