--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .container-header {
-    height: 80px;
+    max-height: 80px;
     line-height: 80px;
 }
 
@@ -61,7 +61,7 @@ a {
 }
 
 .container-img-top {
-    height: 850px;
+    min-height: 850px;
     background-color: #b5d1e7;
 }
 
@@ -82,7 +82,7 @@ a {
 }
 
 .container-generale-text-img {
-    height: 500px;
+    max-height: 500px;
 }
 
 .container-testo-top-laterale {
@@ -128,13 +128,12 @@ a {
 
 
 .container-img-right-out img {
-    height:600px;
-    background-size: cover;
-    margin-top: -100px;
+    max-height: 600px;
+    margin-top: -150px;
 }
 
 .container-main {
-    height: 900px;
+    max-height: 900px;
     margin-top: 200px;
 
 }
@@ -158,9 +157,8 @@ a {
 }
 
 .container-box {
-    margin-top: 30px;
     width: 95%;
-    margin: auto;
+    margin: 30px auto 0 auto;
 }
 
 .top {
@@ -272,11 +270,9 @@ a {
 }
 
 .box-inferiore {
-    margin-top: 40px;
     border: 1px solid black;
     text-align: center;
-    margin-left: 2%;
-    margin-right: 2%;
+    margin: 40px 20px 0 20px;
 }
 
 .box-contattaci {
@@ -319,7 +315,7 @@ a {
 }
 
 .img-left img {
-    height: 500px;
+    Max-height: 500px;
 }
 
 .testo-right {
