--- a/css/style.css
+++ b/css/style.css
@@ -388,17 +388,61 @@ a {
      display: inline-block;
  }
 
-.azienda-left {
-    width: 29%;
+.aziende-loghi {
+    width: 35%;
+    display: inline-block;
+}
+
+.aziende-center {
+    width: 59%;
+}
+
+.aziende-loghi img {
     display: inline-block;
 }
 
 .square {
-    width: 50%;
-    height: 50%;
+    width: 48%;
+    height: 48x%;
+    display: inline-block;
 }
 
-.designit {
-    background-color: red;
+.square img {
+    width: 100%;
+    height: 360px;
+    fill: white;
 }
 
+.designit img {
+    background-color: #a3d29b;
+    padding: 0 30px;
+}
+
+.arizona img {
+    background-color: #60092b;
+    padding: 100px 70px;
+}
+
+.florida img {
+    background-color: #0192ce;
+    padding: 160px 50px;
+}
+
+.topps img {
+    background-color: #ff1c1c;
+    padding: 140px 50px;
+}
+
+.aziende-center {
+    background-color: #f5f5f5;
+    display: inline-block;
+    margin-left: -25px;
+}
+
+.aziende-center div {
+    padding: 50px 0 50px 50px;
+}
+
+.aziende-center img {
+    height: 50px;
+}
